/**
 * Button
 */
public interface Button {

    
}