/**
 * Label
 */
public interface Label {

    
}