/**
 * SwingLabel
 */
public class SwingLabel implements Label {

}