/**
 * SwtButton
 */
public class SwtButton implements Button {

}