/**
 * SwtEdit
 */
public class SwtEdit implements Edit {

}